--- a/rapidiam/rapidiamapp/templates/rapidiamapp/datascience.html
+++ b/rapidiam/rapidiamapp/templates/rapidiamapp/datascience.html
@@ -234,7 +234,7 @@
         
         {% endfor %}
         <div id="datascience-result">
-            <table class="table">
+            <table id="datatable" class="table table-striped" style="width:100%">
                 <thead>
     
                     <tr>
