--- a/rapidiam/rapidiamapp/templates/rapidiamapp/dataviz copy.html
+++ b/rapidiam/rapidiamapp/templates/rapidiamapp/dataviz copy.html
@@ -259,7 +259,7 @@
 
         </div>
 
-        <table class="table">
+        <table id="datatable" class="display" style="width:100%">
             <thead>
 
                 <tr>
