--- a/rapidiam/rapidiamapp/templates/rapidiamapp/base.html
+++ b/rapidiam/rapidiamapp/templates/rapidiamapp/base.html
@@ -8,6 +8,10 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <link href="https://cdn.datatables.net/1.13.5/css/jquery.dataTables.min.css" rel="stylesheet">
+    <link href="https://cdn.datatables.net/1.13.5/css/dataTables.bootstrap5.min.css" rel="stylesheet">
+    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
         crossorigin="anonymous"></script>
@@ -35,6 +39,13 @@
 
 .fourth-color { 
 	background: #34495e; 
+}
+
+#datatable{
+    font-size: 0.8em;
+    padding:0.2em;
+    margin:0.2em;
+    
 }
     </style>
 </head>
@@ -149,7 +160,10 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
 
-
+<script src="https://cdn.datatables.net/1.13.5/js/jquery.dataTables.min.js"></script>
+<script>
+    new DataTable('#datatable');
+</script>
 <!-- <script>
     function closeForm(field_function_id) {
         document.getElementById(`edit_params_${field_function_id}`).innerHTML = "";
