--- a/rapidiam/rapidiamapp/templates/rapidiamapp/datapreparation.html
+++ b/rapidiam/rapidiamapp/templates/rapidiamapp/datapreparation.html
@@ -210,7 +210,7 @@
 {% if msg %}
 {{msg}}
 {% else %}
-        <table class="table">
+<table id="datatable" class="table table-striped" style="width:100%">
             <thead>
 
                 <tr>
