--- a/rapidiam/rapidiamapp/templates/rapidiamapp/dataviz.html
+++ b/rapidiam/rapidiamapp/templates/rapidiamapp/dataviz.html
@@ -93,7 +93,7 @@
             </form>
 
 
-        <table class="table">
+            <table id="datatable" class="table table-striped" >
             <thead>
 
                 <tr>
