--- a/rapidiam/rapidiamapp/templates/rapidiamapp/datascience.html
+++ b/rapidiam/rapidiamapp/templates/rapidiamapp/datascience.html
@@ -234,7 +234,9 @@
         
         {% endfor %}
         <div id="datascience-result">
-            <table id="datatable" class="table table-striped" style="width:100%">
+            
+<div class="table-wrapper" style=" overflow: auto">
+    <table id="datatable" class="table table-striped display compact">
                 <thead>
     
                     <tr>
@@ -254,7 +256,7 @@
                     {% endfor %}
                 </tbody>
             </table>
-           
+           </div>
         </div>
    
 {% endif %}
