--- a/rapidiam/rapidiamapp/templates/rapidiamapp/datapreparation.html
+++ b/rapidiam/rapidiamapp/templates/rapidiamapp/datapreparation.html
@@ -50,8 +50,8 @@
 
     <h4 style="background-color: rgb(238, 234, 254);border:2px solid black;">Data Preparation</h4>  
      
-        <div class="row">
-        <div class="col-12">
+        
+        <div class="col-6">
             <h4><a href="{% url 'rapidiamapp:fieldfunction' action='createderived' id=0 %}">Wrangling/Enrichment[+]</a>
             <!-- <a href="{% url 'rapidiamapp:fieldfunction' action='createdatascience' id=0 %}">DataScience[+]</a> -->
         </h4>
@@ -210,7 +210,9 @@
 {% if msg %}
 {{msg}}
 {% else %}
-<table id="datatable" class="table table-striped" style="width:100%">
+
+<div class="table-wrapper" style=" overflow: auto">
+<table id="datatable" class="table table-striped display compact">
             <thead>
 
                 <tr>
@@ -230,6 +232,7 @@
                 {% endfor %}
             </tbody>
         </table>
+        </div>
 {% endif %}
 
   
